# Recon-Revenant

./: .gitignore  README.md  ai_report.md  linux_report.md  pyproject.toml  report.md  windows_report.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
recon_revenant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
reconrevenant/: cli.py  parser_enum.py  parser_nmap.py  reasoner.py  report.py  signals.py  signals_builder.py
reconrevenant/ai/: engine.py  merge.py  prompt.py  safety.py
testdata/: winpeas.txt
tests/: test_basic.py
tests/testdata/: linpeas.txt  nmap_linux.txt  nmap_windows.txt
