[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-revenant"
version = "0.4.0"
description = "Privacy-safe Linux and Windows reconnaissance reasoning tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "haunter - haunter-actual@outlook.com / https://haunter-actual.github.io" }
]

dependencies = []

[project.scripts]
recon-revenant = "reconrevenant.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reconrevenant*"]
exclude = ["tests*", "testdata*"]

